gobilda_ws/gobilda_ws/log/build_2024-11-11_16-22-12/final_project/stderr.log
  File "/home/robot/gobilda/gobilda_ws/install/final_project/lib/python3.10/site-packages/final_project/draw_square.py", line 13
    from geometry_msgs.msg TwistStamped
                           ^^^^^^^^^^^^
SyntaxError: invalid syntax

